--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ aws-wsgi==0.2.7
 boto3==1.18.30
 botocore==1.21.30
 certifi==2023.7.22
+cffi==1.16.0
 charset-normalizer==3.3.2
-click==8.0.1
+click==8.1.7
+cryptography==41.0.7
 Flask==2.0.1
 Flask-Cors==4.0.0
 idna==3.4
@@ -12,9 +14,13 @@ itsdangerous==2.0.1
 Jinja2==3.0.1
 jmespath==0.10.0
 MarkupSafe==2.0.1
+pyasn1==0.5.1
+pycparser==2.21
+PyJWT==2.8.0
 python-dateutil==2.8.2
 pytz==2021.1
 requests==2.31.0
+rsa==4.9
 s3transfer==0.5.0
 six==1.16.0
 typing-extensions==3.10.0.0
